# deepreasearch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
node/: index.js
src/: mcp_server.py  run_agent.py
src/deepresearch_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
